<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/mainBox"
            android:layout_toLeftOf="@+id/delButton">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/charac_name"
                android:id="@+id/name"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/name"
                android:id="@+id/var_layout">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/seg_label"
                    android:text="@string/seg_label"/>
            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/seg_label"
                    android:id="@+id/segment"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/segment"
                    android:id="@+id/wound_label"
                    android:text="@string/wound_label"/>
            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/wound_label"
                    android:id="@+id/wounds"/>
        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/var_layout"
                android:id="@+id/main_label"
                android:text="@string/mVA_label"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/main_label"
                android:layout_alignBaseline="@id/main_label"
                android:id="@+id/mVA"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_label"
                android:id="@+id/sVA_label"
                android:text="@string/sVA_label"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sVA_label"
                android:layout_alignBaseline="@id/sVA_label"
                android:id="@+id/sVA"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sVA_label"
                android:id="@+id/speed_label"
                android:text="@string/speed_label"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/speed_label"
                android:layout_alignBaseline="@id/speed_label"
                android:id="@+id/speed"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speed_label"
                android:id="@+id/toughness_label"
                android:text="@string/toughness_label"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/toughness_label"
                android:layout_alignBaseline="@id/toughness_label"
                android:id="@+id/tougness"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toughness_label"
                android:id="@+id/mainRoll_container">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/rollmain_label"
                    android:text="@string/rollmain_label"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/rollmain_label"
                    android:id="@+id/rollmain_button"
                    android:text="@string/roll"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/rollmain_button"
                    android:layout_centerVertical="true"
                    android:id="@+id/rollmain_res"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainRoll_container"
                android:id="@+id/secRoll_container">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/rollsec_label"
                    android:text="@string/rollsec_label"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/rollsec_label"
                    android:id="@+id/rollsec_button"
                    android:text="@string/roll"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/rollsec_button"
                    android:layout_centerVertical="true"
                    android:id="@+id/rollsec_res"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secRoll_container">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/eatThat_label"
                    android:text="@string/eatThat_label"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/eatThat_value"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/eatThat_label"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/eatThat_value"
                    android:id="@+id/eatThat_button"
                    android:text="@string/eatThat_button"/>
        </RelativeLayout>
    </RelativeLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/delButton"
            android:text="@string/deleteChar_button"/>
</RelativeLayout>